<resources>
    <string name="app_name">Story_Finder</string>
    <string name="story_title_card">Card2</string>
    <string name="story_name">Name</string>
    <string name="story_title_description">Description, etc.</string>
    <string name="image">Image</string>
    <string name="description_etc">Description, etc.</string>
    <string name="name">Name</string>
    <string name="link">Link</string>
    <string name="rvsp_limit">Number of Attendances</string>
    <string name="id">ID: </string>
    <string name="search">SEARCH</string>
    <string name="team_26_nstory_finder">Team 26:\nStory Finder</string>
    <string name="view_more_button">View More!</string>
</resources>
