<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"

    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="16dp"

    android:adjustViewBounds="true"
    android:scaleType="fitCenter"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="8dp">


    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="16dp">


        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/list_item_story_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:maxHeight="180dp"
            android:maxWidth="150dp"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/list_item_story_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/list_item_story_image"
            android:layout_toStartOf="@id/list_item_story_image"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:paddingTop="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textStyle="bold"
            tools:text="@string/name" />


        <TextView
            android:id="@+id/list_item_story_rvsp_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_story_name_text_view"
            android:layout_toLeftOf="@id/list_item_story_image"
            android:layout_toStartOf="@id/list_item_story_image"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:text="@string/rvsp_limit" />

    </RelativeLayout>

</android.support.v7.widget.CardView>