<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhitePrimeGrey"
    android:fillViewport="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteGreyLight"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/story_card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp"
            >

            <ImageView
                android:id="@+id/story_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/colorWhite"
                android:contentDescription="@string/image"
                android:maxHeight="180dp"
                android:padding="18dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/nivImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:maxHeight="180dp"
                android:padding="18dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/noimage" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/story_card2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="18dp"
                >
                <TextView
                    android:id="@+id/story_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="24dp"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/story_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="16sp"
                    tools:text="the id" />


                <TextView
                    android:id="@+id/story_title_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/description_etc"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/story_rsvp_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/story_title_description"
                    android:paddingBottom="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/rvsp_limit"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    />


                <TextView
                    android:id="@+id/story_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingBottom="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/link"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>